src/test/deca/codegen/valid/provided/convFloat.deca
// Description:
//    test de convFloat
//
// Resultats:
//      1
//      1.0000
//      1.0000
//      2.0000
//      2.0000

{
	int a = 1;
	float b = 1;
	float c = a;
	float d = a + 1;
	println(a);
	println(b);
	println(c);
	println(d);
	println(1.0 + 1);
}
