src/test/deca/codegen/invalid/tests/derefNullGetLvalue.deca
class A {
	int x = 1;
}

{
	A a = new A();
	A b = new A();
	b = null;
	a.x = b.x;
}
